relinkando imgs e paginas do projeto

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <meta name="description" content="pagina para treinar html, css e javaScript">
 
         <!--CSS do projeto-->
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/tatoo-hand/css/style.css">
         <!--JS do projeto-->
-    <script defer src="/js/script.js"></script>
+    <script defer src="/tatoo-hand/js/script.js"></script>
        
 
     <title>Tatoo-Hand</title>
@@ -17,7 +17,7 @@
 <body>
    
     <header class="cabecalho">
-        <img class="img-cabecalho" src="img/t4.png" alt="logo site">
+        <img class="img-cabecalho" src="/tatoo-hand/img/t4.png" alt="logo site">
         <nav class="cabecalho-menu">
             <a class="cabecalho-menu-item" href="index.html">Início</a>
             <a class="cabecalho-menu-item" href="artes.html">Galeria</a>
@@ -48,16 +48,16 @@
 
                             <!--slide images-->
                     <div class="slide first">
-                        <img src="/img/t4.jpg" alt="artes-tatoo">
+                        <img src="/tatoo-hand/img/t4.jpg" alt="artes-tatoo">
                     </div>
                     <div class="slide">
-                        <img src="/img/t5.jpg" alt="artes-tatoo">
+                        <img src="/tatoo-hand/img/t5.jpg" alt="artes-tatoo">
                     </div>
                     <div class="slide">
-                        <img src="/img/t1.jpg" alt="artes-tatoo">
+                        <img src="/tatoo-hand/img/t1.jpg" alt="artes-tatoo">
                     </div>
                     <div class="slide">
-                        <img src="/img/t6.jpg" alt="artes-tatoo">
+                        <img src="/tatoo-hand/img/t6.jpg" alt="artes-tatoo">
                     </div>
                             <!--navigation auto-->
                     <div class="navigation-auto">
@@ -86,7 +86,7 @@
         
     </main>
     <footer class="rodape">
-        <img class="rodape-img" src="/img/t4.png" alt="logo site">
+        <img class="rodape-img" src="/tatoo-hand/img/t4.png" alt="logo site">
     </footer>
      <!--JS do projeto-->
      <script src="script.js"></script>
