--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="pagina para treinar html, css e javaScript">
 
         <!--CSS do projeto-->
-    <link rel="stylesheet" href="/tatoo-hand/css/style.css">
+    <link rel="stylesheet" href="style.css">
         <!--JS do projeto-->
     <script defer src="/tatoo-hand/js/script.js"></script>
        
