--- a/artes.html
+++ b/artes.html
@@ -7,16 +7,16 @@
     <meta name="description" content="pagina para treinar html, css e javaScript">
 
      <!--CSS do projeto-->
-     <link rel="stylesheet" href="/tatoo-hand/css/style.css">
-     <link rel="stylesheet" href="/tatoo-hand/css/style-galeria.css">
+     <link rel="stylesheet" href="style.css">
+     <link rel="stylesheet" href="style-galeria.css">
      <!--JS do projeto-->
-    <script defer src="/tatoo-hand/js/script-galeria.js"></script>
+    <script defer src="script-galeria.js"></script>
 
     <title>Tatoo-Hand</title>
 </head>
 <body>
     <header class="cabecalho">
-        <img class="img-cabecalho" src="/tatoo-hand/img/t4.png" alt="logo site">
+        <img class="img-cabecalho" src="t4.png" alt="logo site">
         <nav class="cabecalho-menu">
             <a class="cabecalho-menu-item" href="index.html">Início</a>
             <a class="cabecalho-menu-item" href="artes.html">Galeria</a>
@@ -94,7 +94,7 @@
        </section>
     </main>
     <footer class="rodape">
-        <img class="rodape-img" src="/tatoo-hand/img/t4.png" alt="logo site">
+        <img class="rodape-img" src="t4.png" alt="logo site">
     </footer>
     
 </body>
