--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <!--CSS do projeto-->
     <link rel="stylesheet" href="style.css">
         <!--JS do projeto-->
-    <script defer src="/tatoo-hand/js/script.js"></script>
+    <script defer src="script.js"></script>
        
 
     <title>Tatoo-Hand</title>
