--- a/historia.html
+++ b/historia.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="pagina para treinar html, css e javaScript">
 
-    <link rel="stylesheet" href="/tatoo-hand/css/style.css">
+    <link rel="stylesheet" href="style.css">
 
     <title>Tatoo-Hand</title>
 </head>
 <body>
     <header class="cabecalho">
-        <img class="img-cabecalho" src="/tatoo-hand/img/t4.png" alt="logo site">
+        <img class="img-cabecalho" src="t4.png" alt="logo site">
         <nav class="cabecalho-menu">
             <a class="cabecalho-menu-item" href="index.html">Início</a>
             <a class="cabecalho-menu-item" href="artes.html">Galeria</a>
@@ -23,7 +23,7 @@
        <h1>################ ༼ つ ◕_◕ ༽つ Em construição ☜(ﾟヮﾟ☜)################</h1>
     </main>
     <footer class="rodape">
-        <img class="rodape-img" src="/tatoo-hand/img/t4.png" alt="logo site">
+        <img class="rodape-img" src="t4.png" alt="logo site">
     </footer>
     
 </body>
