--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
    
     <header class="cabecalho">
-        <img class="img-cabecalho" src="/tatoo-hand/img/t4.png" alt="logo site">
+        <img class="img-cabecalho" src="t4.png" alt="logo site">
         <nav class="cabecalho-menu">
             <a class="cabecalho-menu-item" href="index.html">Início</a>
             <a class="cabecalho-menu-item" href="artes.html">Galeria</a>
@@ -48,16 +48,16 @@
 
                             <!--slide images-->
                     <div class="slide first">
-                        <img src="/tatoo-hand/img/t4.jpg" alt="artes-tatoo">
+                        <img src="t4.jpg" alt="artes-tatoo">
                     </div>
                     <div class="slide">
-                        <img src="/tatoo-hand/img/t5.jpg" alt="artes-tatoo">
+                        <img src="t5.jpg" alt="artes-tatoo">
                     </div>
                     <div class="slide">
-                        <img src="/tatoo-hand/img/t1.jpg" alt="artes-tatoo">
+                        <img src="t1.jpg" alt="artes-tatoo">
                     </div>
                     <div class="slide">
-                        <img src="/tatoo-hand/img/t6.jpg" alt="artes-tatoo">
+                        <img src="t6.jpg" alt="artes-tatoo">
                     </div>
                             <!--navigation auto-->
                     <div class="navigation-auto">
@@ -86,7 +86,7 @@
         
     </main>
     <footer class="rodape">
-        <img class="rodape-img" src="/tatoo-hand/img/t4.png" alt="logo site">
+        <img class="rodape-img" src="t4.png" alt="logo site">
     </footer>
      <!--JS do projeto-->
      <script src="script.js"></script>
